--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 <title>Sethi Brothers Corp| Home</title>
+<link rel="icon" href="images/logo.png" type="image/png" sizes="16x16">
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
