create sathi bro website

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3-banner-head-info">
 				<div class="container">
 				   <div class="banner-text">
-						<h2>Sample Heading Here
-                         <span>Sub Heading Here</span></h2>
+						<!-- <h2>Sample Heading Here
+                         <span>Sub Heading Here</span></h2> -->
 					
 					</div>
 				</div>
