--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					<div class="w3-header-top-right-text">
 						<h6 class="caption"> Contact Us</h6>
-						<p>(111)+245 245 66</p>
+						<p>09673688124</p>
 					</div>
 
 					<div class="email-right">
 						<h6 class="caption">Email Us</h6>
-						<p><a href="mailto:mail@example.com" class="info"> info@example.com</a></p>
+						<p><a href="mailto:ask@sethibrotherscorp.com" class="info"> ask@sethibrotherscorp.com</a><br>
+						<a href="mailto:sethibroherscorp@gmail.com" class="info"> sethibroherscorp@gmail.com</a></p>
 
 					</div>
 
@@ -95,13 +96,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="http://alkapandey.in/" target="_blank">Alka Pandey</a></li>
 						<li><a href="#">Gallery</a></li>
 						<li><a href="#">Media</a></li>
-						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social Connect <span class="caret"></span></a>
+						<!-- <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social Connect <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#">Facebook</a></li>
 								<li><a href="#">Instagram</a></li>'
 							    <li><a href="#">Youtube</a></li>
 							</ul>
-						</li> 
+						</li>  -->
 						<li><a href="#">Contact Us</a></li>
 					</ul>
 				</div>
@@ -186,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 <!-- //wthree-mid -->
 	<!--/services-->
-	  <div class="services" id="services">
+	 <!--  <div class="services" id="services">
 	      <div class="container">
 		   <h3 class="tittle">Our Services</h3>
 		      <div class="serve-top">
@@ -256,7 +257,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="clearfix"> </div>		
 	          </div>	
 	      </div>	
-	  </div>
+	  </div> -->
 				<!-- Gallery -->
 		<div class="w3ls-section wthree-pricing gallery-section" id="gallery">
 		      <div class="container">
@@ -460,9 +461,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 footer_grid">
 				<h3>Contact Info</h3>
 				<ul class="address">
-					<li><i class="fa fa-map-marker" aria-hidden="true"></i>Sample <span>Text Here</span></li>
-					<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-					<li><i class="fa fa-phone" aria-hidden="true"></i>+08888888888</li>
+					<li><i class="fa fa-map-marker" aria-hidden="true"></i>Showroom 59, MG Road, <span>Pune Camp,Pune, Maharashtra</span></li>
+					<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:ask@sethibrotherscorp.com ">ask@sethibrotherscorp.com </a><br><a href="mailto:sethibroherscorp@gmail.com ">sethibroherscorp@gmail.com </a></li>
+					<li><i class="fa fa-phone" aria-hidden="true"></i>09673688124</li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
