--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  <!--/latest-->
   	   <div class="wthree-mid latest" id="latest">
 	       <div class="container">
-		        <h3 class="tittle">Latest Handbags</h3>
+		        <h3 class="tittle">Our Brands</h3>
 		             <p class="top-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor, consectetur adipiscing elit.Duo suas ocurreret imperdiet ad. Eum in porro scripta. Mea an ceteros fierent,Nulla et finibus libero. Suspendisse vitae ex facilisis, ultricies est sed, porta ante. Vivamus tristique luctus lorem, eget dignissim lacus sodales tristique.<p>
                    <div class="lats">
 				     <div class="col-md-6 serve">
@@ -161,10 +161,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<figcaption>
 							<h4>Beautiful <span>Handbags</span></h4>
 							<p>Moses loves to run after butterflies.</p>
-							<a href="#">View more</a>
+							<a href="https://doubleubag.com/" target="_blank">View more</a>
 						</figcaption>			
 					</figure>
-					<p class="ser-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor, consectetur adipiscing elit.Duo suas ocurreret imperdiet ad. Eum in porro scripta. Mea an ceteros fierent<p>
+					<p class="ser-para">DoubleU<p>
 
 					</div>
 					<div class="col-md-6 serve">
@@ -173,10 +173,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<figcaption>
 							<h4>Beautiful <span>Handbags</span></h4>
 							<p>Moses loves to run after butterflies.</p>
-							<a href="#">View more</a>
+							<a href="http://alkapandey.in/" target="_blank">View more</a>
 						</figcaption>			
 					</figure>
-					<p class="ser-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor, consectetur adipiscing elit.Duo suas ocurreret imperdiet ad. Eum in porro scripta. Mea an ceteros fierent<p>
+					<p class="ser-para">Alka Pandey<p>
 
 					</div>
 					<div class="clearfix"></div>
