--- a/index.html
+++ b/index.html
@@ -159,24 +159,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<figure class="effect-moses">
 						<img src="images/l22.jpg" alt="img20" class="img-responsive" />
 						<figcaption>
-							<h4>Beautiful <span>Handbags</span></h4>
+							<h4>Double<span>U</span></h4>
 							<p>Moses loves to run after butterflies.</p>
 							<a href="https://doubleubag.com/" target="_blank">View more</a>
 						</figcaption>			
 					</figure>
-					<p class="ser-para">DoubleU<p>
+					<p class="ser-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor, consectetur adipiscing elit.Duo suas ocurreret imperdiet ad.<p>
 
 					</div>
 					<div class="col-md-6 serve">
 					<figure class="effect-moses">
 						<img src="images/l22.jpg" alt="img20" class="img-responsive" />
 						<figcaption>
-							<h4>Beautiful <span>Handbags</span></h4>
+							<h4>Alka <span>Pandey</span></h4>
 							<p>Moses loves to run after butterflies.</p>
 							<a href="http://alkapandey.in/" target="_blank">View more</a>
 						</figcaption>			
 					</figure>
-					<p class="ser-para">Alka Pandey<p>
+					<p class="ser-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor, consectetur adipiscing elit.Duo suas ocurreret imperdiet ad.<p>
 
 					</div>
 					<div class="clearfix"></div>
